--- a/views/blogs/new.ejs
+++ b/views/blogs/new.ejs
@@ -5,6 +5,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://rawgit.com/totaljs/components/master/0dependencies/jctajr.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 
 
 <style>
@@ -241,7 +242,28 @@
     
       <div class="row" >
         
-        <div class="col col-lg-1"></div>
+        <div class="col col-lg-1" style="text-align:center">
+          <p style="font-weight:bold;
+                    font-size:15px;
+                    "> CSS Libraries<br>included</p>
+   <p style="background-color:black;
+             color:white;
+             padding:3px;
+             border-radius:3px;">Bootstrap.css</p><br>
+   <p style="background-color:black;
+     color:white;
+     padding:3px;
+     border-radius:3px;">fontawesome.css</p><br>
+      <p style="background-color:black;
+             color:white;
+             padding:3px;
+             border-radius:3px;">jQuery</p><br>
+   <p style="background-color:black;
+     color:white;
+     padding:3px;
+     border-radius:3px;">SemanticUI.css</p>
+          
+        </div>
         
   <div class="col col-lg-10">
     <div class="row" style="border:solid 3px Red;">
