--- a/views/people.ejs
+++ b/views/people.ejs
@@ -41,7 +41,7 @@
        
       
          
-          <img style="height:150px;width:150px;margin-top:5px; border:dashed 2px white;" src="<%= user.ProfileImage%>" alt="">
+          <img style="height:150px;width:150px;margin-top:5px; border:dashed 2px white;object-fit: cover;" src="<%= user.ProfileImage%>" alt="">
      <p style="margin-top:17px;"><span style="font-family: 'Josefin Sans', sans-serif;
        font-size:27px;color:white;"><%=user.username%> </span>
      <span><%=user.ReputationScore%></span></p>
