--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -1,17 +1,119 @@
 <html>
 <head>
- <title>test</title>
+ <title>Profile</title>
+   <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel = "stylesheet"  type = "text/css" href = "https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Overpass+Mono" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src='/script/jquery.transit.js'></script>
+    <link href="https://fonts.googleapis.com/css?family=Overpass+Mono" rel="stylesheet">
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Macondo" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/typicons/2.0.9/typicons.css" />
+    <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
 </head>
 <body>
-<form action = "/imageUpload" method="POST" enctype="multipart/form-data">
- <input type="file" name="file" ></input>
- <input type="submit" name="submit" value="submit"></input>
-</form>
+  
+  <div class="row">
+    <div class="col col-lg-4"
+         style="text-align:center">
+      <p style="margin-top:100px;">
+            <span style="font-family: 'Overpass Mono', monospace;
+                 font-size:40px;
+                 
+                 font-weight:bold;
+                 text-shadow:2px 2px white ;">&nbsp;<%=currentUser.username%></span>
+      </p>
+ 
+    </div>
+    <div style="height:400px;text-align:center" class="col col-lg-4">
+      <h2 style=" font-family: 'Overpass Mono', monospace;
+                 background-color:white;
+                 margin-top:20px;
+                 text-shadow:1px 1px black ;
+                 color:<%=currentUser.FavouriteColor%>;
+                 padding:10px;">Change profile image</h2>
+          <img style="border:solid 2px <%=currentUser.FavouriteColor%>;
+                height:100%;
+                width:100%;
+                
+                border:dotted 6px white;
+                object-fit: cover;
+                " src="<%=currentUser.ProfileImage%>">
+      
+      
+   
+     <form action = "/imageUpload" method="POST" enctype="multipart/form-data">
+     
+       
+     <input  style="background-color:<%=currentUser.FavouriteColor%>;
+                    font-family: 'Overpass Mono', monospace;
+                   margin-top:-100px;
+                   color:white;
+                   margin-left:100px" 
+            type="file" name="file" ></input><br>
+      
+ <input style="background-color:<%=currentUser.FavouriteColor%>;
+               font-size:20px;
+               padding:10px;
+               color:white;
+               font-family: 'Overpass Mono', monospace;
+               font-weight:bold;
+               border:solid 0px white;
+               border-radius:2px;
+               " type="submit" name="submit" value="Save"></input>
+     </form> 
+   
+  
+ 
+    
+    </div>
+    <div class="col col-lg-4">
+      
+
+    </div>
+  </div>
+
 </body>
 </html>
   
   
-  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <style>
+    body{
+      background-color: <%=currentUser.FavouriteColor%>;
+      font-family: 'Overpass Mono', monospace;
+         }
+</style>
   
   
   
