--- a/views/blogs/show.ejs
+++ b/views/blogs/show.ejs
@@ -70,7 +70,7 @@
       
 
       <img src="<%=Creater.ProfileImage%>" style=" object-fit: cover;
-                                                  
+                                                   opacity:0.5;
                                                    position: relative;
                                                     width:100%;
                                                     height: 100%;
@@ -78,10 +78,10 @@
       
             
       <h2 style=" position: absolute; top: -25px;
+                  object-fit: cover;
                   color:white;font-size:30px;
                   font-family: 'Nunito',sans-serif;
-                  background: rgb(0, 0, 0);
-                  background: rgba(0, 0, 0, 0.5);
+                 
                   padding: 110px 50px 130px 50px; "><span style="font-size:50px"></span><%=Creater.ReputationScore%> <br>xp <br>
         
         
@@ -119,7 +119,7 @@
 
 
 
- <div>
+ <div class="container">
     <form  action="/blogs/<%=blog._id%>/run" method = "POST"> 
      
     
@@ -167,22 +167,25 @@
       </div>
       
       
-      
-      <div  class="row">
+   
+      <div  class="row" >
           <div class="col col-lg-12" style="height:500px;">
       <textarea name = "html" id="htmlDisplay" style="width:100%;height:100%;background-color:<%=currentUser.FavouriteColor%>;
-                                        border: solid 1px <%=currentUser.FavouriteColor%>;color:white;
-                                        font-family: 'Roboto Mono', monospace;"
+                                        border: solid 1px <%=currentUser.FavouriteColor%>;color:black;
+                                        font-family: 'Roboto Mono', monospace;
+                                        font-weight:bold"
                 type = "text" name = "html" spellcheck="false" rows="10"  readonly ><%= blog.html%></textarea>
     
      <textarea name = "css" id="cssDisplay" style="width:100%;height:100%; border: solid 1px <%=currentUser.FavouriteColor%>;
-                                      background-color:<%=currentUser.FavouriteColor%>;color:white;
-                                      font-family: 'Roboto Mono', monospace;"
+                                      background-color:<%=currentUser.FavouriteColor%>;color:black;
+                                      font-family: 'Roboto Mono', monospace;
+                                      font-weight:bold"
                 type = "text" name = "html" spellcheck="false" rows="10"  readonly ><%= blog.css%></textarea>
     
      <textarea name = "javascript" id="jsDisplay" style="width:100%;height:100%; border: solid 1px <%=currentUser.FavouriteColor%>;
-                                     background-color:<%=currentUser.FavouriteColor%>;color:white;
-                                     font-family: 'Roboto Mono', monospace;"
+                                     background-color:<%=currentUser.FavouriteColor%>;color:black;
+                                     font-family: 'Roboto Mono', monospace;
+                                      font-weight:bold"
                 type = "text" name = "html" spellcheck="false" rows="10"  readonly ><%= blog.javascript%></textarea>
     
       </div>
@@ -400,7 +403,7 @@
   
     <div class = "col col-lg-4">
     
-  <div class = "ui top attached segment">
+<!--   <div class = "ui top attached segment">
   <div class = "ui main text container segment">
   <div class = "ui huge header"><%=blog.title%></div>
   <img class = "ui centered rounded image" src = "<%= blog.image %>">
@@ -418,7 +421,7 @@
             <button class="ui  small red button" >Delete</button>
             </form>
   </div>
-</div>
+</div> -->
   </div>
   
   
@@ -427,7 +430,7 @@
   
   
  
-   <form action="/blogs/<%= blog._id %>/subscribe/" method = "POST">
+<!--    <form action="/blogs/<%= blog._id %>/subscribe/" method = "POST">
       <input class="ui  big  blue button" value ="Subscribe" type = "submit" >
   </form>
   
@@ -448,7 +451,7 @@
        <strong><%= Student.username %> </strong>  
     </p>
   
-    <% })  %>
+    <% })  %> -->
                           
                           
 
