--- a/views/indexComponents/starterMessage.ejs
+++ b/views/indexComponents/starterMessage.ejs
@@ -14,7 +14,7 @@
                                     border:solid 4px #bf02ff;
                                     z-index:-10px">{}</button>
          
-          <button class="btn" style="animation: mymove2 200s infinite;
+          <button id="helloworld" class="btn" style="animation: mymove2 200s infinite;
                                      z-index:1;
                                      font-size:<%=Math.floor(Math.random()*100)%>;px;
                                      font-family: 'Overpass Mono', monospace;
@@ -427,7 +427,12 @@
 </style>
 
 
-
+<script>
+    $( function() {
+    $( "#helloworld" ).draggable();
+  } );
+  </sc
+</script>
 
 
 
