--- a/views/newestQuestions.ejs
+++ b/views/newestQuestions.ejs
@@ -33,8 +33,8 @@
         <div class="navbar-header">
          
           <a class="navbar-brand" href="/"><span style = "color:purple;font-weight:bold">codeSteak</span> </a>
-          <a class="navbar-brand" href="/community"><span style = "color:white;font-weight:bold">Most Popular</span> </a>
-          <a class="navbar-brand" href="/community/newestQuestions">Newest  </a>
+          <a class="navbar-brand" href="/community"><span style = "">Most Popular</span> </a>
+          <a class="navbar-brand"  href="/community/newestQuestions"  style = "color:white;font-weight:bold" href="#">Newest  </a>
           
         </div>
        
