--- a/views/answer.ejs
+++ b/views/answer.ejs
@@ -22,7 +22,8 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:500" rel="stylesheet">
   </head>
 
-<body style="background-color:#ccc">
+<body style="background:url(https://i.imgur.com/vkpa3gg.png);            
+              background-attachment: fixed;">
     
   <nav style="background-color:black;
               border-bottom:dashed 4px purple;
@@ -66,6 +67,9 @@
 
 <div style="background-color:white" class="container">
   
+  
+  
+  
   <div style="background-color:white;margin-top:50px;" class="row">
     <div class="col col-lg-12">
       <p style="margin-top:20px;
@@ -75,9 +79,24 @@
                 font-weight:bold;
                 "><strong><%=question.questionText%></strong></p>
       
+      
+            <span style="float:right">
+    
+      <span style="color:grey">asked by</span> <span style="font-size:16px;color:purple;font-family: 'Work Sans', sans-serif;">
+        <img src="<%=question.askerImage%>" style="width:40px;
+                                                   height:40px;
+                                                   border-radius:5px;"><%=question.asker%> </span> on
+    <span style="font-size:22px;color:rgba(128,0,128,0.5);font-family: 'Work Sans', sans-serif;">
+      <%=question.askedOn.toDateString()%></span>
+  
+  </span>
+  
+      
      <textarea style="border:solid 1px white;
                       font-family: 'Raleway', sans-serif;
-                      color:grey
+                      color:grey;
+                      width:400px;
+                      height:300px;
                       " 
                name="" id="" cols="30" rows="10" readonly><%=question.questionDescription%></textarea><br>
       
@@ -130,7 +149,7 @@
   
    <form id="answerform" action="/answer/<%=question._id%>/" method="POST">
         
-        <textarea style="border:solid 1px white;
+        <textarea style="border:solid 2px lightblue;
                       font-family: 'Roboto Mono', monospace;
                       font-size:13px;
                       width:800px;
@@ -139,8 +158,8 @@
                       padding:20px;
                       
                       "
-                  type="text" name="answerText"></textarea>
-    <button>Submit</button>
+                  type="text" name="answerText"></textarea><br>
+    <button style="">Submit your answer</button>
   </form><br>
   
   
@@ -157,7 +176,8 @@
                  background-color:#15a300;
                     padding:5px;
                     margin-left:10px;
-                    border-radius:4px">
+                    border-radius:4px;
+                 margin-bottom:500px">
     Answer this question
   </button>
   
