--- a/views/confirm.ejs
+++ b/views/confirm.ejs
@@ -1,6 +1,15 @@
 <% include ./partials/header %>
 
 
+  <form action = "/ProjectImageUpload/<%=blog._id%>" method="POST" enctype="multipart/form-data">
+     
+       
+     <input type="file" name="file" ></input><br>
+      
+ <input type="submit" name="submit" value="Save"></input>
+     </form> 
+
+
 <h1>
   <%=blog.title%>
 </h1>
