--- a/views/indexComponents/profileSection.ejs
+++ b/views/indexComponents/profileSection.ejs
@@ -5,27 +5,21 @@
   
   
   <div  class="col col-lg-3 col-md-3 col-sm-6 col-xs-12"  style="border-right:solid 1px #ccc;
-                                                                 position:fixed;background-color:<%=currentUser.FavouriteColor%>;
+                                                                 position:fixed;background-color:;
                                                                  margin-top:-20px;
                                                                  padding-bottom:20px;
                                                                  height:710px">
     <p>
       
-      <p style="text-align:center;
-            color:white;background-color:black;padding:5px;
-              margin-top:14px;
-             font-family: 'Overpass Mono', monospace;
-            font-weight:bold;
-           border-radius:3px;
-            font-size:30px;
-            margin-left:20px
-            ">Profile</p>
+    
       
-    <img style="border:solid 2px <%=currentUser.FavouriteColor%>;
+    <p style="text-align:center">
+      <img style="border:solid 2px <%=currentUser.FavouriteColor%>;
                 height:150px;
                 width:150px;
                 object-fit: cover;
                 " src="<%=currentUser.ProfileImage%>">
+    </p>
       
     <%if(currentUser.ProfileImage.toString() === "http://res.cloudinary.com/sp241930/image/upload/v1519073356/imageedit_2_7510950099_xbbjip.png"){%>
       
@@ -47,13 +41,16 @@
       
       
       
-      
-    <span style="font-family: 'Overpass Mono', monospace;
+      <br>
+    <p style="text-align:center">
+      <span style="font-family: 'Overpass Mono', monospace;
                  font-size:30px;
                  font-weight:bold;
                  text-shadow:2px 2px <%=currentUser.FavouriteColor%> ;">&nbsp;<%=currentUser.username%></span>
+    </p>
+    
 <!--        <span class="typcn typcn-flash" style="font-size:50px;"></span><br> -->
-      <p>
+      <p> <br>
        <a id="Notifications" href="/userProfile"><span style=" font-family: 'Overpass Mono', monospace;
                                 font-size:16px;
                                 color:white;
@@ -70,7 +67,7 @@
                                 padding-top:11px;
                                 padding-bottom:11px;
                                 box-shadow:3px 3px <%=currentUser.FavouriteColor%>;">
-         <i  style="color:<%=currentUser.FavouriteColor%>" class="fa fa-users"></i> Friend Request</span></a><br><br><br>
+         <i  style="color:<%=currentUser.FavouriteColor%>" class="fa fa-users"></i> Friend Request</span></a><br><br>
         
        <a style="text-align:center" href="/userProfile">&nbsp; <span style=" font-family: 'Overpass Mono', monospace;
                                 font-size:16px;
@@ -88,7 +85,7 @@
     </p>
   
   <div style="background-color:white;
-              height: 200px;
+              height: 300px;
               margin-left:10px;
               border:solid 3px black;
     overflow: scroll;" class="col col-lg-12">
@@ -143,10 +140,80 @@
                  bottom:100px;
                  ">Create Post</button>
   
-  <div style="height:450px;
-              background-color:#ccc;
+  
+  <%posts.forEach(function(post){%>
+  
+ <div style="margin-top:20px">
+   
+       <div style="height:450px;
+              background:url(<%=post.postImage%>);
+              background-size:cover;
+             
               width:100%;
               border-bottom:solid 10px white"></div>
+
+    <div style="background-color:rgba(0,0,0,0.5);
+                 width:100%;
+               
+                height:440px;
+                margin-top:-450px
+                 ">
+      
+         <p style="
+                 width:100%;
+                text-align:center;
+                 padding-top:100px;
+             
+               "><span style="font-family: 'Overpass Mono', monospace;
+                  font-size:50px;
+                  color:white;
+                  margin-top:100px
+                  "><strong><%=post.caption%></strong></span>
+  </p><br>
+      
+      
+      
+      <p style="font-family: 'Overpass Mono', monospace;
+                  font-size:20px;
+                   color:white
+                ">Posted By <img src="<%=post.postedBy.createrImage%>" alt="" style="height:50px;width:50px;"> <%=post.postedBy.username%>
+        on <span style ="color:<%=currentUser.FavouriteColor%>"><%=post.postedOn.toDateString()%></span>
+      </p>
+      
+       <p style="margin-left:20px"><span style="background-color:rgba(255,255,255,0.5);
+                                           padding:10px;
+                                           margin-right:20px
+         "><strong>Tags :</strong> <span style="background-color:black;
+                              color:white;
+                              padding:5px;
+                        ">Web #</span></span></p><br><br><br><br>
+      
+      <form action="">
+        <button style="font-family: 'Overpass Mono', monospace;
+                       font-size:20px;
+                       padding:10px;
+                       width:90%;
+                       text-align:center;
+                       background-color:rgba(0,0,0,0.7);
+                       color:white;
+                       margin-left:30px;
+                       margin-right:30px;
+                       border:0px;
+                       ">
+          <strong><i style="font-size:30px" class="fa fa-retweet"></i> Reblog this post</strong></button>
+      </form>
+      
+  </div>
+   
+  </div> 
+  
+  
+  
+    
+  
+  
+  <%})%>
+
   
     <div style="height:450px;
               background-color:lightblue;
@@ -168,7 +235,7 @@
 <div  class="col col-lg-4 col-md-3 col-sm-12 col-xs-12"  style="border:solid 1px #ccc;
                                                                 height:710px;
                                                                  position:fixed;
-                                                                 background-color:<%=currentUser.FavouriteColor%>;
+                                                                 background-color:#ccc;
                                                                  top: 75px;
                                                                  right: 0;
                                                                 float:right;">
