--- a/views/indexComponents/profileSection.ejs
+++ b/views/indexComponents/profileSection.ejs
@@ -188,11 +188,12 @@
                               padding:5px;
                         ">Web #</span></span></p><br><br><br><br>
       
-      <form action="">
+      <p style="text-align:center">
+          <form action="">
         <button style="font-family: 'Overpass Mono', monospace;
-                       font-size:20px;
+                       font-size:16px;
                        padding:10px;
-                       width:90%;
+                       width:45%;
                        text-align:center;
                        background-color:rgba(0,0,0,0.7);
                        color:white;
@@ -201,7 +202,29 @@
                        border:0px;
                        ">
           <strong><i style="font-size:30px" class="fa fa-retweet"></i> Reblog this post</strong></button>
+            
+             <a style="font-family: 'Overpass Mono', monospace;
+                       font-size:16px;
+                       padding:10px;
+                       width:45%;
+                       text-align:center;
+                       
+                       color:white;
+                       margin-left:10px;
+                       margin-right:30px;
+                       border:0px;
+                       " href="/post/<%=post._id%>">
+     <strong><i style="font-size:30px" class="fa fa-arrow-circle-right"></i> View this post</strong>
+      </a>
+            
       </form>
+      
+     
+      
+      </p>
+    
+      
+      
       
   </div>
    
